--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,16 @@
     </scm>
     <properties>
         <java.version>21</java.version>
-        <langchain4j.verison>1.0.0-beta3</langchain4j.verison>
+        <langchain4j.verison>1.1.0-beta7</langchain4j.verison>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--okhttp-->
         <dependency>
@@ -52,23 +56,23 @@
             <artifactId>jsoup</artifactId>
             <version>1.17.2</version>
         </dependency>
+        <!--langchain4-reactor-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-reactor</artifactId>
+            <version>${langchain4j.verison}</version>
+        </dependency>
         <!--langchain4j-mcp-->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-mcp</artifactId>
             <version>${langchain4j.verison}</version>
         </dependency>
-        <!--langchain4j-rag-->
-        <dependency>
-            <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-easy-rag</artifactId>
-            <version>${langchain4j.verison}</version>
-        </dependency>
         <!--langchain4j-->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
-            <version>${langchain4j.verison}</version>
+            <version>1.1.0</version>
         </dependency>
         <!--langchain4j-springboot-starter-->
         <dependency>
